add free edit phone number by user

--- a/core/Resource/ru.lproj/telProcessor.strings
+++ b/core/Resource/ru.lproj/telProcessor.strings
@@ -12,3 +12,5 @@
 "Call" = "Позвонить";
 
 "Input region code to call:" = "Введите код города для звонка:";
+
+"Edit phone:" = "Отредактируйте телефонный номер:"; 
