fixed russian translate

--- a/core/Resource/ru.lproj/telProcessor.strings
+++ b/core/Resource/ru.lproj/telProcessor.strings
@@ -9,7 +9,7 @@
 
 "Cancel" = "Отмена";
 
-"Call" = "Позвонить";
+"Call" = "Вызов";
 
 "Input region code to call:" = "Введите код города для звонка:";
 
